frontend/css/style.css
/* ... */
#sib_header_small #sib_expasy_logo > a#sib_link{
    display:block;
    position:absolute;
    width:41px;
    height:32px;
    z-index: 2;
}
#sib_header_small #sib_expasy_logo > a#expasy_link{
    display:block;
    position:absolute;
    left:41px;
    width:190px;
    height:32px;
    z-index: 2;
}
#sib_header_small #sib_expasy_logo{
    top:8px;
    width: 229px;
    height: 32px;
    background: transparent url("../images/sib/sib_ExPASy_logo_small.png") no-repeat top left;
}
#sib_header_small #sib_expasy_logo, #sib_header #sib_expasy_logo {
    position: absolute;
    top: 8px;
    left: 18px;
}
#sib_header_nav {
    top: 10px;
    right: 10px;
    position: absolute;
    white-space: nowrap;
    font: 10px Helvetica, sans-serif !important;
}
#sib_header_nav a {
    color: #555555 !important;
    font-family: Helvetica, Verdana, sans-serif !important;
    font-size: 12px !important;
    margin: 10px;
}
#sib_footer {
    margin-top:auto;
    height: 40px;
    background-color: #1E2425;
    color: #F7F8FA;
    font-size: 10px;
    letter-spacing: 1px;
}
#sib_footer a, #sib_footer span {
    font-family: Verdana !important;
}
#sib_footer a{
    text-decoration: none;
    color: #F7F8FA;
}
#sib_footer a:hover{
    color: #F7F8FA;
    text-decoration: underline;
}
#sib_footer_content {
    position: relative;
    padding: 8px 300px 17px 36px;
}
#sib_footer_logos{
    position: absolute;
    right: 160px;
    top: 10px;
}
#sib_footer_logos a {
    display:inline-block;
    width:24px;
    height:24px;
    margin-right: 5px;
}
#sib_footer_logos #twitter {
    background-image: url("../images/logos/twitter.png");
}
#sib_footer_logos #github {
    background-image: url("../images/logos/github.png");
}
#sib_footer_right{
    position: absolute;
    right: 18px;
    top: 8px;
    text-align: right;
}
#sib_footer_right a{
    padding-left: 10px;
}
#sib_footer_right a:hover img{
    text-decoration: none;
    border: none;
}
#sib_footer_gototop {
    background: transparent url("../images/sib/triangle_hover.png") no-repeat top left;
    padding-left: 10px;
    margin-right: 10px;

}
/* Form
----------------------------------*/
#form {
    box-shadow:0 4px 10px 0 rgba(0,0,0,0.05), 0 4px 20px 0 rgba(0,0,0,0.05);
    margin: 25px auto;
    width:770px;
}
#form-header {
    color:#FFF;
    text-align: center;
    background-image: url("../images/assets/header.svg");
    background-color:#5175c4;
    border:1px solid #425e9f;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    padding:9px;
}
#form-title {
    left: -15px;
    font-size:30px;
    font-weight:bold;
    margin: 0 124px 0 0;
}
#version {
    float: left;
    font-size: 14px;
    font-weight: bold;
    margin-top: 13px;
    padding-left: 10px;
}
#form-body {
    display:flex;
    justify-content: space-between;
    background-color:#f0f0f0;
    border:1px solid #ccc;
}
#form-body-left a, #form-body-left span {
    font-size: 16px;
}
#form-body-left {
    flex-basis: 527px;
    background-color:#fafafa;
    padding: 10px 0 0 20px;
}
.table-inputs {
    display:inline-block;
    vertical-align:top;
    margin-top: 10px;
}
.table-inputs td {
    padding-left:7px;
    padding-right:7px;
    text-align:right;
}
#table-inputs-options a, #table-inputs-options span {
    color:#7e7e7e;
}
#table-inputs-options td:nth-of-type(3) {
    padding-left:0;
}
#form-body-right {
    flex-basis: 220px;
    border-left:1px solid #ccc;
}
#form-body-right h2 {
    padding-bottom: 6px;
}
#form-body-right label {
    font-size: 15px;
}
#form-scores {
    border-bottom:1px solid #ccc;
    padding: 10px 20px;
}
#label-include-Amelogenin {
    margin: 5px auto;
    padding-left: 26px;
}
#form-filters {
    border-bottom:1px solid #ccc;
    padding: 10px 20px 15px 20px;
}
#form-filters h2 {
    margin-bottom: 10px;
}
#form-start {
    padding: 10px 20px 0;
    text-align:center;
}
#form-start h2 {
    text-align:left;
}
#search {
    font-size:13px;
    padding:5px;
    font-weight: bold;
    background-color: #e1e1e1;
    width: 80%;
    margin: 0 auto 15px auto;
    border: 1px solid #b9b9b9;
    border-radius: 4px;
}
#search:hover {
    background-color: #d6e2eb;
    border-color: #98afcd;
    color: #107dac;
    cursor:pointer;
}
#search:active {
    background-color: #c1ccd4;
}
#form-buttons button{
    background-color:#efefef;
    border: 0;
    border-top: 1px solid #ccc;
    display:block;
    font-size:14px;
    padding:7px;
    width: 100%
}
#form-buttons button:hover {
    background-color:#e5f1fb;
    color:#107dac;
    cursor:pointer;
}
#form-buttons button:active {
    background-color: #d7ecfb;
}
#form-buttons .half {
    float:left;
    width: 50%
}
#form input[type=text] {
    border:1px solid #ccc;
    border-radius:2px;
    display:block;
    outline:0;
    padding: 3px 6px;
    width:94px;
}
#form input[type=text]:disabled {
    background-color:#efefef;
}
#form h2 {
    font-size: 16px;
    font-weight: bold;
    margin: 1px 1px 1px 0;
}
/* Checkboxes
----------------------------------*/
.check-container {
    cursor:pointer;
    display:block;
    position:relative;
}
.check-container .checkmark:after {
    -ms-transform:rotate(45deg);
    -webkit-transform:rotate(45deg);
    border:solid #FFF;
    border-width:0 3px 3px 0;
    height: 8px;
    left:5px;
    top:1px;
    transform:rotate(45deg);
    width: 3px;
}
.check-container input {
    cursor:pointer;
    height:0;
    opacity:0;
    position:absolute;
    width:0;
}
.check-container input:checked ~ .checkmark {
    background-color:#5b9cd6;
    border:1px solid #4a81b0;
}
.check-container input:checked ~ .checkmark:after {
    display:block;
}
.checkmark {
    background-color:#fff;
    border:1px solid #ccc;
    height:15px;
    width:15px;
    left:0;
    position:absolute;
    top:-9px;
}
.checkmark:after {
    content:"";
    display:none;
    position:absolute;
}
#check-Amelogenin {
    top: 2px;
}
/* ... */

